--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.aac">
 
     <application
+        android:name=".idVO"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Aac">
+        android:theme="@style/Theme.Aac"
+        tools:ignore="Instantiatable">
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -20,6 +23,8 @@
         </activity>
         <activity android:name=".word1Activity"></activity>
         <activity android:name=".word2Activity"></activity>
+        <activity android:name=".loginActivity"></activity>
+        <activity android:name=".addidActivity"></activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
